--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -21,7 +21,7 @@ template(name='login')
                             |Login #{username}
                             i.right.chevron.icon
                     else
-                        .ui.center.aligned.secondary.segment
+                        .ui.center.aligned.secondary.smoothed.segment
                             .ui.small.grey.header Username "#{username}" not found
                             a.ui.button(href='/register') Register
                 .ui.center.aligned.basic.segment    
