--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -7,11 +7,12 @@ template(name='delta')
                         i.icon(class=icon)
                         | #{title}
                     unless is_loading
-                        //- if currentUser
-                        .ui.icon.circular.green.big.button.add_model_doc(title="Add #{title}")
-                            i.plus.icon
-                        if can_edit
+                        if is_admin
+                            .ui.icon.circular.green.big.button.add_model_doc(title="Add #{title}")
+                                i.plus.icon
+                        //- if can_edit
                             //- +edit_button
+                        if is_admin
                             .ui.icon.circular.basic.button.edit_model
                                 i.cog.icon
                                 //- | Configure #{plural}
@@ -96,21 +97,23 @@ template(name='delta_result')
                 if is_model
                     a.ui.circular.basic.button.route_model(href="/m/#{slug}")
                         i.sitemap.icon
-                        |View
-                    a.ui.circular.basic.button.route_model(href="/model/edit/#{_id}")
-                        i.edit.icon
-                        |Edit
+                        |Go to Section
+                    if is_admin
+                        a.ui.circular.basic.button.route_model(href="/model/edit/#{_id}")
+                            i.edit.icon
+                            |Edit
                 else
-                    a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/edit")
-                        i.pencil.icon
-                        |Edit
+                    if is_admin
+                        a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/edit")
+                            i.pencil.icon
+                            |Edit
                     a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/view")
                         i.eye.icon
                         |View
                 each model.actions
                     +Template.dynamic template=this data=..
-                if _author_id
-                    +author_info
+                //- if _author_id
+                //-     +author_info
                 +creation_info
                 //- if _timestamp_tags
                 //-     .ui.small.inline.grey.header timestamp tags
