stars bg, working register exception to ensure logged in, remove basic classes, black buttons, lowercase headers

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -121,7 +121,7 @@ template(name='big_user_card')
 
 
 template(name='user_info')
-    a.ui.small.circular.basic.button.item(href="/user/#{user.username}/")
+    a.ui.small.circular.button.item(href="/user/#{user.username}/")
         //- if user.image_id
         //-     img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100 gravity='face' crop='fill'}}")
         //- |#{user.first_name} #{user.last_name}
@@ -134,7 +134,7 @@ template(name='role_editor')
         .ui.button #{this}
 
 template(name='author_info')
-    a.ui.circular.basic.button(href="/user/#{_id}/view")
+    a.ui.circular.button(href="/user/#{_id}/view")
         if image_id
             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
          by #{author.profile.name}
@@ -165,12 +165,12 @@ template(name='voting')
 
 
 template(name='view_button')
-    a.ui.icon.circular.large.basic.button.view(title='View' href="/m/#{model}/#{_id}/view")
+    a.ui.icon.circular.large.button.view(title='View' href="/m/#{model}/#{_id}/view")
         i.right.chevron.large.icon
 
 
 template(name='remove_button')
-    a.ui.circular.basic.button.remove(title='Delete')
+    a.ui.circular.button.remove(title='Delete')
         i.remove.red.icon
         |Delete
 
