--- a/client/client.jade
+++ b/client/client.jade
@@ -20,6 +20,15 @@ head
 
 
 template(name='layout')
+    +nav
+    //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=500 crop='crop'}}")
+    img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
+    .ui.stackable.grid.profile_grid
+        .row
+            .sixteen.wide.column
+                #main
+                    +yield
+    
     //- .context
     //-     +nav
     //-     .ui.attached.basic.segment.pushable
@@ -29,9 +38,6 @@ template(name='layout')
     //-                 //- .ui.basic.fluid.segment
     //-                 +yield
         //- +footer
-    +nav
-    #main
-        +yield
     //- +footer
 
 
