--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -3,7 +3,7 @@ template(name='delta')
         .ui.stackable.padded.grid
             .row
                 .six.wide.column.scrolling
-                    .ui.right.aligned.inline.header
+                    .ui.right.aligned.inline.grey.header
                         i.icon(class=icon)
                         | #{title}
                     unless is_loading
@@ -13,7 +13,7 @@ template(name='delta')
                         //- if can_edit
                             //- +edit_button
                         if is_admin
-                            .ui.icon.circular.basic.button.edit_model
+                            .ui.icon.circular.button.edit_model
                                 i.cog.icon
                                 //- | Configure #{plural}
                         // .ui.divider
@@ -23,11 +23,11 @@ template(name='delta')
                                 
                         if current_delta
                             if is_dev
-                                .ui.icon.circular.basic.button.print_delta(title='Print Session Doc')
+                                .ui.icon.circular.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                                .ui.reset.icon.circular.basic.button(title='Reload Session')
+                                .ui.reset.icon.circular.button(title='Reload Session')
                                     i.refresh.icon
-                                .ui.delete_delta.icon.circular.basic.button(title='Delete Session')
+                                .ui.delete_delta.icon.circular.button(title='Delete Session')
                                     i.trash.icon
                         else
                             .create_delta.ui.button.pointer(title='new session')
@@ -47,7 +47,7 @@ template(name='facet')
     if filtering_res
         .ui.accordion
             .active.title
-                .ui.inline.small.grey.header 
+                .ui.inline.small.inverted.header 
                     if icon
                         i.small.grey.icon(class=icon)
                     if title
@@ -56,9 +56,9 @@ template(name='facet')
                         |#{key}
                     i.dropdown.icon
             .active.content
-                //- .ui.icon.small.transparent.input
-                //-     i.grey.search.icon
-                //-     input.add_filter(type='text')
+                .ui.icon.small.transparent.input
+                    i.grey.search.icon
+                    input.add_filter(type='text')
                 each filtering_res
                     if name
                         .selector.ui.circular.large.compact.button.toggle_selection(class=toggle_value_class title=count)
@@ -83,7 +83,7 @@ template(name='toggle_delta_config')
 
 template(name='delta_result')
     with result 
-        .ui.result.smoothed.segment(class=loading_class)
+        .ui.result.cloud.segment(class=loading_class)
             if title
                 a.ui.header(href="/m/#{current_model.slug}/#{_id}/view")
                     if icon
@@ -95,21 +95,21 @@ template(name='delta_result')
             .extra
                 +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
                 if is_model
-                    a.ui.circular.basic.button.route_model(href="/m/#{slug}")
+                    a.ui.circular.button.route_model(href="/m/#{slug}")
                         i.sitemap.icon
-                        |Go to Section
+                        |view model
                     if is_admin
-                        a.ui.circular.basic.button.route_model(href="/model/edit/#{_id}")
+                        a.ui.circular.button.route_model(href="/model/edit/#{_id}")
                             i.edit.icon
-                            |Edit
+                            |edit
                 else
                     if is_admin
-                        a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/edit")
+                        a.ui.circular.button(href="/m/#{current_model.slug}/#{_id}/edit")
                             i.pencil.icon
-                            |Edit
-                    a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/view")
+                            |edit
+                    a.ui.circular.button(href="/m/#{current_model.slug}/#{_id}/view")
                         i.eye.icon
-                        |View
+                        |view
                 each model.actions
                     +Template.dynamic template=this data=..
                 //- if _author_id
